--- a/css4/css4.html
+++ b/css4/css4.html
@@ -75,7 +75,7 @@
             margin: 0 0.32rem 0 0.42rem;
         }
         
-        .suo {
+        .lock {
             width: 0.29rem;
             height: 0.43rem;
             margin: 0 0.44rem 0 0.42rem;
@@ -115,11 +115,11 @@
         <input class="input-box" type="text" style="border:none" placeholder="请输入手机号码">
     </div>
     <div class="box">
-        <img class="suo" src="task2-css4.png">
+        <img class="lock" src="task2-css4.png">
         <input class="input-box" type="password" style="border:none" placeholder="请输入密码">
     </div>
     <input class="button" type="button" style="border:none" value="登录">
-    <a class="forget" herf="http://www.xxxxxxx.com.cn">忘记密码</a>
+    <a class="forget" href="http://www.xxxxxx.com.cn">忘记密码</a>
 
 </body>
 
