--- a/css5/css5.html
+++ b/css5/css5.html
@@ -21,7 +21,9 @@
             margin: 0;
         }
         
-        header {
+        header {position: sticky;
+            top: 0;
+            z-index: 1;
             width: 100%;
             height: 0.88rem;
             display: flex;
@@ -50,7 +52,7 @@
             background: url(task1-css5.png) no-repeat;
             background-size: cover;
             width: 100%;
-            height: 3.26rem;
+            height: 3.3rem;
             position: relative;
         }
         
@@ -160,7 +162,8 @@ dt::after{content:"";
     line-height: 1rem;
     border: 0.01rem solid #e1e5e7;
      }
-
+     .nowrap{white-space:nowrap;}
+     .liuyan{}
     </style>
 </head>
 
@@ -209,8 +212,8 @@ dt::after{content:"";
     </div>
 
 <div class="bottom-box">
-        <dt>自我介绍</dt>
-        <dd>可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。</dd>
+        <dt class="nowrap">自我介绍</dt>
+        <dd>可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。可以洗衣、做饭、照顾老人，在护工方面有五年经验，经验丰富。</dd>
 
 </body>
 
