--- a/css5/1.html
+++ b/css5/1.html
@@ -175,7 +175,7 @@ span{
     white-space:nowrap;
 }
 .zwjs{
-    padding: .3rem  0 .3rem  0;
+    padding: .3rem .3rem .3rem 0;
 }
 .footer-box{
     display: flex;
@@ -195,7 +195,7 @@ span{
     height: .88rem;
     margin: 0 .25rem  .04rem .37rem;
     outline: none;
-    border-radius: 10%;
+    border-radius:.15rem;
     border: .01rem solid #5fc0cd;
     color:#5FC0CD;
     background-color: #ffffff;
@@ -206,8 +206,8 @@ span{
     width: 50%;
     height: .88rem;
     border: none;
-    outline: none;
-    border-radius: 10%;
+    outline: none;  
+    border-radius:.15rem;
     margin: 0  .37rem .04rem  0;
     color:#ffffff;
     background-color:#5FC0CD;
@@ -254,7 +254,7 @@ span{
              </li>
              <li class="center-bottom-box">
                 <span class="nowrap">自我介绍</span>
-                <p class="zwjs">可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。</p>
+                <p class="zwjs">可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。</p>
              </li>
          </ul>  
         </main>
