--- a/css6/css6.html
+++ b/css6/css6.html
@@ -21,19 +21,18 @@ header {
     top:0;
     z-index: 1;
     width: 100%;
-    height: 0.88rem;
+    height: .88rem;
     text-align: center;
-    line-height: 0.88rem;
-    word-spacing:-0.16rem;
+    line-height: .88rem;
+    word-spacing:-.16rem;
     background-color: #5FC0CD;
 }
 .guzhu{
     width:1.44rem;
-    height: 0.7rem;
-    font-size: 0.34rem;
-    border-radius: 15%;
+    height: .7rem;
+    font-size: .34rem;
+    border-radius:.15rem;
     border: none;
-    outline: none;
     background-color:#55A8B3;
     color:#FFFFFF;
 }
@@ -41,23 +40,21 @@ header {
     width:1.44rem;
     height: 0.7rem;
     font-size: 0.34rem;
-    border-radius: 15%;
+    border-radius: .15rem;
     border: none;
-    outline: none;
     background-color:#FFFFFF;
     color:#55A8B3;
 }
 .top-right{
     float: right;
-    margin: 0.22rem 0.3rem 0 -0.5rem;
-    width: 0.42rem;
-    height: 0.42rem;
+    margin: .22rem .3rem 0 -.5rem;
+    width: .42rem;
+    height: .42rem;
 }
 .box{
     display:flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
     height: 0.8rem;
     background-color:#FFFFFF;
 }
@@ -65,16 +62,12 @@ header {
     text-align: center;
     line-height:0.8rem;
     width:50%;
-    height:0.8rem;
     border:0.01rem solid #e1e5e7;
     font-size:0.28rem;
-    list-style:none;
     color:#999999;
 }
 .sjx{
     float: right;
-    width: 0;
-    height: 0;
     border-width: 0.1rem;
     border-style: solid;
     border-color: #AFBAC0 transparent transparent transparent;
@@ -84,10 +77,10 @@ header {
 </head>
 <body>
     <header>
-        <input class="guzhu" type="button" value="找雇主">
-         <input class="hugong" type="button" value="找护工">
+        <button type="button" class="guzhu">找雇主</button>
+        <button type="button" class="hugong">找护工</button>
         <a href="www.xxxxx.com">
-        <img class="top-right" src="task1-css6.png">  
+            <img class="top-right" src="task1-css6.png">  
         </a>  
     </header>
     <div class="box">
@@ -103,10 +96,3 @@ header {
     </div>
 </body>
 </html>
-
-<li><a href="#">前端开发</a>  
-    <ul>  
-      <li><a href="#">HTML</a></li>  
-      <li><a href="#">CSS</a></li>  
-    </ul>  
-  </li>  
