--- a/css5/1.html
+++ b/css5/1.html
@@ -6,12 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>个人主页</title>
     <style pyte="txet/css">
-        html {
+html {
     font-size: 312.5%;
 }
 
 body {
     font-size: initial;
+    padding-bottom:1.5rem;
     margin: 0;
 }
 
@@ -24,10 +25,10 @@ header {
     position: sticky;
     top: 0;
     z-index: 1;
-    height: .88rem;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: .88rem;
     background-color: #5fc0cd;
 }
 
@@ -50,7 +51,6 @@ h1 {
     position: relative;
     height: 3.3rem;
     background: url(task1-css5.png) no-repeat center/cover;
-    /* background-size: cover; */
 }
 
 .portrait {
@@ -64,27 +64,27 @@ h1 {
     position: absolute;
     top:1.16rem;
     left:2.4rem;
-    text-align: center;
     width: 2.3rem;
+    text-align: center;
 }
-.name {
+#name {
     font-size: .36rem;
     letter-spacing: .05rem;
     color: #ffffff;
 }
 
-.age {
+#age {
+    margin: 0 0 0 .3rem;
     font-size: .28rem;
     letter-spacing: .02rem;
-    margin: 0 0 0 .3rem;
     color: #ffffff;
 }
 .location {
     width: .18rem;
     height: .23rem;
-    margin: 0 .05rem 0 .05rem;
+    margin: 0 .05rem -.05rem .05rem;
 }
-.dizhi {
+#dizhi {
     font-size: .24rem;
     letter-spacing: .01rem;
     color: #ffffff;
@@ -100,13 +100,9 @@ h1 {
 ul,li{
     padding: 0;
     font-size:.32rem;
-    list-style-type:none;  
+    list-style:none;  
 }
-.ul{
-    color: #999999;
-}
-
-b::before{
+strong::before{
      display: inline-block;
      content:"";
      width: .01rem;
@@ -121,14 +117,14 @@ b::before{
 }
 #wjx-right{
     padding-left: .4rem;
-    margin:0 .1rem 0 .15rem;
+    margin:0 .1rem 0 -.2rem;
     background: url(task5-css5.png) no-repeat 0 -.46rem;
     
 }
-.font{
-    margin: 0 0 0 .09rem;
-}
+
 .main-font{
+    margin: 0 0 0 .61rem;
+    white-space:nowrap;
     color: #999999;
 }
 span::after{
@@ -139,7 +135,7 @@ span::after{
     border: .008rem solid #E1E5E7;
     margin:  0 .3rem 0 .3rem;
 }
-.span.span::after{
+.onespan::after{
     display: inline-block;
     content:"";
     width: .008rem;
@@ -147,17 +143,10 @@ span::after{
     border: .008rem solid #E1E5E7;
     margin:  0 0 0 .3rem;
 }
-.style.span.span::after{
-    display: inline-block;
-    content:"";
-    width: .008rem;
-    height: .26rem;
-    border: .008rem none #E1E5E7;
-    margin:  0 0 0 .3rem;
+.nonespan::after{
+    content:none;
 }
-span{
-    margin: 0 0 0 .61rem;
-}
+
 
 .price{
     color: #E26163;
@@ -166,31 +155,24 @@ span{
     display: flex;
     align-items: center;
     height:50%;
-    overflow:hidden;
     border: .01rem solid #e1e5e7;
     background-color: #ffffff;
+    overflow:hidden;
 }
-.nowrap{
-    color: #999999;
-    white-space:nowrap;
-}
+
 .zwjs{
     padding: .3rem .3rem .3rem 0;
 }
 .footer-box{
     display: flex;
     align-items: center;
-    justify-content: center;
-    position: sticky;
+    position: fixed;
     bottom: 0;
-    z-index: 1;
     width: 100%;
     height: 1.5rem;
     background-color: #ffffff;
 }
 .liuyan{
-    text-align: center;
-    line-height: .88rem;
     width: 50%;
     height: .88rem;
     margin: 0 .25rem  .04rem .37rem;
@@ -201,8 +183,6 @@ span{
     background-color: #ffffff;
 }
 .contact{
-    text-align: center;
-    line-height: .88rem;
     width: 50%;
     height: .88rem;
     border: none;
@@ -224,21 +204,21 @@ span{
         <div class="background">
              <img class="portrait" src="task3-css5.png">
                  <div class="top-main">
-                    <a class="name">高素雅</a>
-                    <a class="age">55岁</a>
+                    <span class="nonespan" id="name">高素雅</span>
+                    <span class="nonespan" id="age">55岁</span>
                     <a href="www.xxxxx.com">
                           <img class="location" src="task2-css5.png">
                      </a>
-                     <a class="dizhi">京城.四方.报纸林</a>
+                     <span class="nonespan" id="dizhi">京城.四方.报纸林</span>
                 </div>
          </div>   
          <ul>
              <li class="center-box">
-                <b>专业技能</b>
+                <strong>专业技能</strong>
              </li>
              <li class="center-box">
-                <span  class="span span" id="wjx">住家</span>
-                <span  class="style span span" id="wjx-right">不含餐</span>
+                <span  class="noespan" id="wjx">住家</span>
+                <span  class="nonespan" id="wjx-right">不含餐</span>
              </li>
              <li class="center-box">
                 <span class="main-font">从业年限</span>
@@ -253,7 +233,7 @@ span{
                 <p class="price">25/小时</p>
              </li>
              <li class="center-bottom-box">
-                <span class="nowrap">自我介绍</span>
+                <span class="main-font">自我介绍</span>
                 <p class="zwjs">可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。可以洗衣、做饭、照顾老人、在护工方面有5年的经验，经验丰富。</p>
              </li>
          </ul>  
