--- a/css6/.html
+++ b/css6/.html
@@ -10,67 +10,93 @@ html {
     font-size:312.5%; 
 } 
 body { 
-    font-size: initial; 
-    margin: 0; 
+    margin: 0;
+    font-size: initial;  
 }
 p, {
      margin: 0; 
 }
 header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     position: sticky;
     top:0;
-    z-index: 1;
     width: 100%;
-    height: 0.88rem;
+    height: .88rem;
     background-color: #5FC0CD;
+    line-height: .88rem;
+    text-align: center;
+    word-spacing:-.16rem;
+    z-index: 1;
 }
 .guzhu{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
     width:1.44rem;
-    height: 0.7rem;
-    font-size: 0.34rem;
-    border-radius: 15%;
+    height: .7rem;
+    border-radius:.15rem;
     border: none;
-    outline: none;
     background-color:#55A8B3;
     color:#FFFFFF;
+    font-size: .34rem;
 }
 .hugong{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: sticky;
     width:1.44rem;
     height: 0.7rem;
-    font-size: 0.34rem;
-    border-radius: 15%;
+    border-radius: .15rem;
     border: none;
-    outline: none;
     background-color:#FFFFFF;
     color:#55A8B3;
+    font-size: 0.34rem;
 }
 .top-right{
     float: right;
-    width: 0.42rem;
-    height: 0.42rem;
-}
+    width: .42rem;
+    height: .42rem;
+    margin: .22rem .3rem 0 -.5rem;
 
+}
+.box{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    height: 0.8rem;
+    background-color:#FFFFFF;
+}
+.iltrate-box{
+    width:50%;
+    border:0.01rem solid #e1e5e7;
+    color:#999999;
+    line-height:0.8rem;
+    text-align: center;
+    font-size:0.28rem;
+}
+.sjx{
+    float: right;
+    border-width: 0.1rem;
+    border-style: solid;
+    border-color: #AFBAC0 transparent transparent transparent;
+    margin: 0.36rem 0.12rem 0 0;
+}
     </style>
 </head>
 <body>
     <header>
-        <input class="guzhu" type="button" value="找雇主">
-         <input class="hugong" type="button" value="找护工">
+        <button type="button" class="guzhu">找雇主</button>
+        <button type="button" class="hugong">找护工</button>
         <a href="www.xxxxx.com">
-        <img class="top-right" src="task1-css6.png">  
+            <img class="top-right" src="task1-css6.png">  
         </a>  
-   
-    </div>
+    </header>
+    <main>
+        <div class="box">
+            <div class="iltrate-box">所在地
+                <span class="sjx"></span>
+            </div>
+            <div class="iltrate-box">食宿
+                <span class="sjx"></span>
+            </div>
+            <div class="iltrate-box">病人情况
+                <span class="sjx"></span>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
