--- a/css6/css6.html
+++ b/css6/css6.html
@@ -50,6 +50,7 @@ header {
     width: .42rem;
     height: .42rem;
     margin: .22rem .3rem 0 -.5rem;
+    background:url(task7-css6.png) no-repeat 0 0;
 
 }
 .box{
@@ -74,28 +75,32 @@ header {
     border-color: #AFBAC0 transparent transparent transparent;
     margin: 0.36rem 0.12rem 0 0;
 }
+ul,li{
+    margin: 0;
+    padding:0;
+    list-style: none;
+}
+
     </style>
 </head>
 <body>
     <header>
         <button type="button" class="guzhu">找雇主</button>
         <button type="button" class="hugong">找护工</button>
-        <a href="www.xxxxx.com">
-            <img class="top-right" src="task1-css6.png">  
-        </a>  
+        <a class="top-right" href="www.xxxxx.com"></a>  
     </header>
     <main>
-        <div class="box">
-            <div class="iltrate-box">所在地
+        <ul class="box">
+            <li class="iltrate-box">所在地
                 <span class="sjx"></span>
-            </div>
-            <div class="iltrate-box">食宿
+            </li>
+            <li class="iltrate-box">食宿
                 <span class="sjx"></span>
-            </div>
-            <div class="iltrate-box">病人情况
+            </li>
+            <li class="iltrate-box">病人情况
                 <span class="sjx"></span>
-            </div>
-        </div>
+            </li>
+        </ul>
     </main>
 
 </body>
