--- a/css6/css6.html
+++ b/css6/css6.html
@@ -33,8 +33,9 @@ header {
     border-radius:.15rem;
     border: none;
     background-color:#55A8B3;
-    color:#FFFFFF;
+    outline: none; 
     font-size: .34rem;
+    color:#FFFFFF;
 }
 .hugong{
     width:1.44rem;
@@ -42,8 +43,9 @@ header {
     border-radius: .15rem;
     border: none;
     background-color:#FFFFFF;
-    color:#55A8B3;
+    font-size: .34rem;
     font-size: 0.34rem;
+    color:#55A8B3;
 }
 .top-right{
     float: right;
@@ -60,13 +62,15 @@ header {
     height: 0.8rem;
     background-color:#FFFFFF;
 }
-.iltrate-box{
-    width:50%;
+.dropdown {
+    position: relative;
+    display: inline-block;
+	width:50%;
     border:0.01rem solid #e1e5e7;
-    color:#999999;
     line-height:0.8rem;
     text-align: center;
     font-size:0.28rem;
+    color:#999999;
 }
 .sjx{
     float: right;
@@ -80,6 +84,16 @@ ul,li{
     padding:0;
     list-style: none;
 }
+.dropdown-content {
+    float: left;
+    display: none;
+    position: absolute;
+    width: 100%;
+    background-color: #f9f9f9;
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+}
 
     </style>
 </head>
@@ -90,17 +104,38 @@ ul,li{
         <a class="top-right" href="www.xxxxx.com"></a>  
     </header>
     <main>
-        <ul class="box">
-            <li class="iltrate-box">所在地
-                <span class="sjx"></span>
-            </li>
-            <li class="iltrate-box">食宿
-                <span class="sjx"></span>
-            </li>
-            <li class="iltrate-box">病人情况
-                <span class="sjx"></span>
-            </li>
-        </ul>
+        <div class="box">
+            <div class="dropdown">
+                <span>所在地
+                    <span class="sjx"></span>
+                </span>
+                <ul class="dropdown-content">
+                    <li>北京</li>
+                    <li>上海</li>
+                    <li>苏州</li>
+                </ul>
+            </div>
+            <div class="dropdown">
+                <span>食宿
+                    <span class="sjx"></span>
+                </span>
+                <ul class="dropdown-content">
+                    <li>一日一餐</li>
+                    <li>一日两餐</li>
+                    <li>一日三餐</li>
+                </ul>
+            </div>
+            <div class="dropdown">
+                <span>病人情况
+                    <span class="sjx"></span>
+                </span>
+                <ul class="dropdown-content">
+                    <li>能自理</li>
+                    <li>不能自理</li>
+                    <li>手术后</li>
+                </ul>
+            </div>
+        </div>
     </main>
 
 </body>
