--- a/css6/css6.html
+++ b/css6/css6.html
@@ -10,7 +10,7 @@ html {
     font-size:312.5%; 
 } 
 body { 
-    margin: 0;
+    margin:0 ;
     font-size: initial;  
 }
 p, {
@@ -19,7 +19,6 @@ p, {
 header {
     position: sticky;
     top:0;
-    width: 100%;
     height: .88rem;
     background-color: #5FC0CD;
     line-height: .88rem;
@@ -45,6 +44,7 @@ header {
     background-color:#FFFFFF;
     font-size: .34rem;
     font-size: 0.34rem;
+    outline: none; 
     color:#55A8B3;
 }
 .top-right{
@@ -94,6 +94,13 @@ ul,li{
 .dropdown:hover .dropdown-content {
     display: block;
 }
+.main-content{
+    display: flex;
+    justify-content: center;
+    height: 1.9rem;
+    border: .001rem solid #E1E5E7;
+    background: #FFFFFF;
+}
 
     </style>
 </head>
@@ -135,6 +142,18 @@ ul,li{
                     <li>手术后</li>
                 </ul>
             </div>
+        </div>
+        <div>
+            <ul>
+                <li class="main-content">
+                    <div></div>
+                </li>
+                <li class="main-content"></li>
+                <li class="main-content"></li>
+                <li class="main-content"></li>
+                <li class="main-content"></li>
+                <li class="main-content"></li>
+            </ul>
         </div>
     </main>
 
