--- a/css6/提问.html
+++ b/css6/提问.html
@@ -13,9 +13,6 @@ body {
     margin:0 ;
     font-size: initial;  
 }
-p {
-     margin: 0; 
-}
 header {
     position: sticky;
     top:0;
@@ -68,7 +65,8 @@ header {
     flex: 1;
     position: relative;
     display: inline-block;
-    border:0.01rem solid #e1e5e7;
+    border-top:0.01rem solid #e1e5e7;
+    border-bottom: 0.01rem solid #e1e5e7;
     line-height:0.8rem;
     text-align: center;
     font-size:0.28rem;
@@ -103,53 +101,29 @@ li.li:hover{
     background-color: #5FC0CD;
 }
 .main-box{
+    display: flex;
+    align-items: center;
     height: 1.8rem;
-    border-top: .001rem solid #E1E5E7;
+    border-bottom: .001rem solid #E1E5E7;
     background: #FFFFFF;
-    line-height: .6rem;
 }
 .content-box{
-flex: 1;
+    width: 100%;
+    height: 1.2rem;
+    border: .01rem solid red;
+    line-height: 1.2rem;
+}
+.date{
+    height: .3rem;
+    padding-left: .4rem;
+    margin: 0 0 0 .3rem;
+    background: url(task7-css6.png) no-repeat 0 -.6rem;
+    font-size:.24rem;
+    /* 字符间距 */
+    letter-spacing: .03rem;
+    color: #999999;
 }
 
-.date{
-    padding-left: .4rem;
-    margin: .3rem 0 .2rem .3rem;
-    background: url(task7-css6.png) no-repeat 0 -.62rem;
-    font-size:.24rem;
-    /* 字符间距 */
-    letter-spacing: .03rem;
-    color: #999999;
-}
-p.left{
-    margin: 0 0 0 .7rem;
-    font-size: .28rem;
-    color:#333333;
-}
-p.right{
-    float:right;
-    margin:-1.13rem .72rem 0 0;
-    font-size: .3rem;
-    color:#E63B0E;
-}
-.location{
-    padding-left: .4rem;
-    margin: .2rem 0 .2rem .3rem;
-    background: url(task7-css6.png) no-repeat 0 -1rem;
-    font-size:.24rem;
-    /* 字符间距 */
-    letter-spacing: .03rem;
-    color: #999999;
-}
-.getback {
-    float:right;
-    width: .19rem;
-    height: .19rem;
-    border-top: .03rem solid #5FC0CD;
-    border-right: .03rem solid #5FC0CD;
-    margin:-1rem .31rem 0 .31rem;
-    transform: rotate(45deg);
-}
     </style>
 </head>
 <body>
@@ -159,47 +133,47 @@ p.right{
         <a class="top-right" href="www.xxxxx.com"></a>  
     </header>
     <main>
-        <div class="box">  
-
-            <ul class="dropdown">
-                <li>所在地
+        <div class="box">
+            <div class="dropdown">
+                <span>所在地
                     <span class="sjx"></span>
-                    <ul class="dropdown-content">
-                        <li class="li">北京</li>
-                        <li class="li">上海</li>
-                        <li class="li">苏州</li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="dropdown">
-                <li>食宿
+                </span>
+                <ul class="dropdown-content">
+                    <li class="li">北京</li>
+                    <li>上海</li>
+                    <li>苏州</li>
+                </ul>
+            </div>
+            <div class="dropdown">
+                <span>食宿
                     <span class="sjx"></span>
-                    <ul class="dropdown-content">
-                        <li class="li">一日一餐</li>
-                        <li class="li">一日两餐</li>
-                        <li class="li">一日三餐</li>
-                    </ul>
-                </li>
-            </ul>
-            <ul class="dropdown">
-                <li>病人情况
+                </span>
+                <ul class="dropdown-content">
+                    <li>一日一餐</li>
+                    <li>一日两餐</li>
+                    <li>一日三餐</li>
+                </ul>
+            </div>
+            <div class="dropdown">
+                <span>病人情况
                     <span class="sjx"></span>
-                    <ul class="dropdown-content">
-                        <li class="li">能自理</li>
-                        <li class="li">不能自理</li>
-                        <li class="li">手术后</li>
-                    </ul>
-                </li>
-            </ul>
+                </span>
+                <ul class="dropdown-content">
+                    <li>能自理</li>
+                    <li>不能自理</li>
+                    <li>手术后</li>
+                </ul>
+            </div>
         </div>
         <ul>
-            <li class="main-box"></li>
-        </ul>
+            <li class="main-box">
+                <ul class="content-box">
+                    <li class="date">服务日期</li>
 
+                </ul>
+            </li>
+        </ul>
     </main>
-    <footer>
-        
-    </footer>
 
 </body>
 </html>
