--- a/css6/css.html
+++ b/css6/css.html
@@ -17,6 +17,8 @@ body {
 p {
      margin: 0; 
 }
+
+/* header眉页 */
 header {
     position: sticky;
     top:0;
@@ -45,7 +47,6 @@ header {
     border: none;
     background-color:#FFFFFF;
     font-size: .34rem;
-    font-size: 0.34rem;
     color:#55A8B3;
 }
 .top-right{
@@ -58,12 +59,14 @@ header {
 .box{
     position:sticky;
     top:.88rem;
-    z-index: 1;
     display:flex;
     align-items: center;
     height: 0.8rem;
     background-color:#FFFFFF;
+    z-index: 1;
 }
+
+/* 下拉框 */
 .dropdown {
     flex: 1;
     position: relative;
@@ -75,16 +78,17 @@ header {
 }
 .sjx{
     float: right;
-    border-width: 0.1rem;
-    border-style: solid;
+    border: solid 0.1rem;
     border-color: #AFBAC0 transparent transparent transparent;
     margin: 0.36rem 0.12rem 0 0;
+    
 }
 ul,li{
     margin: 0;
     padding:0;
     list-style: none;
 }
+/* 下拉框内容 */
 .dropdown-content {
     display: flex;
     flex: 1;
@@ -100,6 +104,8 @@ ul,li{
 li.li:hover{
     background-color: #5FC0CD;
 }
+
+/* main主体 */
 .main-box{
     height: 1.8rem;
     border-bottom: .001rem solid #E1E5E7;
@@ -146,21 +152,60 @@ li.li:hover{
     letter-spacing: .03rem;
     color: #999999;
 }
+
+/* footer页脚 */
 footer{
     position: fixed;
     bottom: 0;
-    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 1rem;
-    border:.01rem solid red;
+    padding-top: .2rem;
     background: #F8FAFB;
+    z-index: 1;
 }
-.left-box{
-    width: 1rem;
-    height:1rem;
-    border: .01rem solid blue;
+.footer-left{
+    height: 1rem;
+    padding:.2rem 0 .16rem 0;
+    margin: 0 0 0 1.7rem;
+    border: none;
+    background: url(task7-css6.png) no-repeat 0 -1.56rem;
+    line-height: 1rem;
+    outline: none; 
+}
+.font-left{
+    font-size: .1rem;
+    color: #5FC0CD;
+}
+.footer-center{
+    width: .95rem;
+    height: .95rem;
+    border-radius:100%;
+    border: none;
+    background: #5FC0CD;
+    outline: none;
 }
 
+.content-center{
+    height:.4rem;
+    margin-left: .18rem;
+    background: url(task7-css6.png) no-repeat 0 -2.2rem;
+}
+.footer-right{
+    height: 1rem;
+    padding:.2rem 0 .16rem 0;
+    margin: 0 1.7rem 0 0;
+    border: none;
+    background: url(task7-css6.png) no-repeat 0 -2.76rem;
+    line-height: 1rem;
+    outline: none;
+}
+.font-right{
+    font-size: .1rem;
+    color: #999999;
+}
     </style>
 </head>
 <body>
@@ -266,7 +311,21 @@ footer{
         </ul>
     </main>
     <footer>
-        <div class="left-box"></div>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-left">
+                <p class="font-left">首页</p>
+            </button>
+        </a>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-center">
+                <p class="content-center"></p>
+            </button>
+        </a>
+        <a href="www.xxx.com">
+            <button type="button" class="footer-right">
+                <p class="font-right">我的</p>
+            </button>
+        </a>
     </footer>
 
 </body>
