--- a/css6/css.html
+++ b/css6/css.html
@@ -51,9 +51,11 @@ header {
 }
 .top-right{
     float: right;
+    position: relative;
+    top:50%;
     width: .42rem;
     height: .42rem;
-    margin: .22rem .3rem 0 -.5rem;
+    margin: -.21rem .3rem 0 0;
     background:url(task7-css6.png) no-repeat 0 0;
 }
 .box{
@@ -124,6 +126,7 @@ li.li:hover{
 .main-div{
     display: flex;
     justify-content: space-between;
+    white-space: nowrap;
 }
 .left{
     margin: 0 0 0 .7rem;
@@ -159,26 +162,23 @@ li.li:hover{
 /* footer页脚 */
 footer{
     position: fixed;
+    right: 0;
     bottom: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 1rem;
-    padding-top: .2rem;
+    padding:0.2rem 1rem .2rem 1rem;
     background: #F8FAFB;
     z-index: 1;
 }
 .footer-left{
-    height: 1rem;
-    padding:.2rem 0 .16rem 0;
-    margin: 0 0 0 1.7rem;
     border: none;
-    background: url(task7-css6.png) no-repeat 0 -1.56rem;
-    line-height: 1rem;
+    background: url(task7-css6.png) no-repeat 0.12rem -1.56rem;
     outline: none; 
 }
 .font-left{
+    margin-top: .45rem;
     font-size: .1rem;
     color: #5FC0CD;
 }
@@ -197,15 +197,12 @@ footer{
     background: url(task7-css6.png) no-repeat 0 -2.2rem;
 }
 .footer-right{
-    height: 1rem;
-    padding:.2rem 0 .16rem 0;
-    margin: 0 1.7rem 0 0;
     border: none;
-    background: url(task7-css6.png) no-repeat 0 -2.76rem;
-    line-height: 1rem;
+    background: url(task7-css6.png) no-repeat 0.12rem -2.76rem;
     outline: none;
 }
 .font-right{
+    margin-top: .45rem;
     font-size: .1rem;
     color: #999999;
 }
